# Tests
# 'check' comes from 'make check'
AM_CPPFLAGS = \
    -I$(top_srcdir)/include \
    -I$(top_srcdir)/third_party/STC/include \
    -I$(top_srcdir)/src

asdf_standard_dir = $(abs_top_srcdir)/asdf-standard
asdf_standard_submodule = $(asdf_standard_dir)/.git
munit_dir = $(top_builddir)/tests/munit
munit_submodule = $(munit_dir)/.git
munit_cflags = -std=c11 -I$(top_srcdir)/tests
munit_ldflags = $(builddir)/libmunit.a
submodules = $(asdf_standard_submodule) $(munit_submodule)

$(asdf_standard_submodule) $(munit_submodule):
	@if test -d $(top_srcdir)/.git; then \
	    echo "Initializing submodules $@ ..."; \
	    git submodule update --init --recursive; \
	    git config submodule.tests/munit.ignore untracked; \
	else \
	    echo "Skipping submodule init: not in a Git repository"; \
	fi


@VALGRIND_CHECK_RULES@

check_PROGRAMS = \
    test-block.unit \
    test-compression.unit \
    test-core-extensions.unit \
    test-event.unit \
    test-extension.unit \
    test-file.unit \
    test-ndarray.unit \
    test-parse-util.unit \
    test-parser.unit \
    test-stream.unit \
    test-tests.unit \
    test-value.unit \
    test-value-util.unit \
    test-yaml.unit

TESTS_ENVIRONMENT = top_builddir=$(top_builddir) top_srcdir=$(top_srcdir)
TESTS = $(check_PROGRAMS)

unit_test_base_cppflags = \
    -DREFERENCE_FILES_DIR=\"$(asdf_standard_dir)/reference_files\" \
    -DFIXTURES_DIR=\"$(abs_srcdir)/fixtures\" \
    -DTEMP_DIR=\"$(abs_builddir)/tmp\" \
    -D_GNU_SOURCE

unit_test_cppflags = \
    $(AM_CPPFLAGS) \
    $(unit_test_base_cppflags)

unit_test_cflags = \
    $(munit_cflags) $(FYAML_CFLAGS) $(STATGRAB_CFLAGS) $(LZ4_CFLAGS) $(CODE_COVERAGE_CFLAGS) $(ASDF_CFLAGS)
unit_test_ldflags =

if DEBUG
unit_test_cflags += -DMUNIT_NO_FORK
unit_test_ldflags += -rdynamic
endif

unit_test_ldflags = $(LDFLAGS) $(CODE_COVERAGE_LDFLAGS)
unit_test_ldadd = $(munit_ldflags) $(top_builddir)/libasdf.la $(ASDF_LIBS)

# Unit tests
check_LIBRARIES = libmunit.a
libmunit_a_SOURCES = util.c $(munit_dir)/munit.c
libmunit_a_CPPFLAGS = $(unit_test_base_cppflags)
libmunit_a_CFLAGS = $(unit_test_cflags) -w

# test-block.unit
test_block_unit_SOURCES = test-block.c
test_block_unit_CPPFLAGS = $(unit_test_cppflags)
test_block_unit_CFLAGS = $(unit_test_cflags)
test_block_unit_LDFLAGS = $(unit_test_ldflags)
test_block_unit_LDADD = $(unit_test_ldadd)

# test-compression.unit
test_compression_unit_SOURCES = test-compression.c
test_compression_unit_CPPFLAGS = $(unit_test_cppflags)
test_compression_unit_CFLAGS = $(unit_test_cflags)
test_compression_unit_LDFLAGS = $(unit_test_ldflags)
test_compression_unit_LDADD = $(unit_test_ldadd)

# test-core-extensions.unit
test_core_extensions_unit_SOURCES = test-core-extensions.c
test_core_extensions_unit_CPPFLAGS = $(unit_test_cppflags)
test_core_extensions_unit_CFLAGS = $(unit_test_cflags)
test_core_extensions_unit_LDFLAGS = $(unit_test_ldflags)
test_core_extensions_unit_LDADD = $(unit_test_ldadd)

# test-event.unit
test_event_unit_SOURCES = test-event.c
test_event_unit_CPPFLAGS = $(unit_test_cppflags)
test_event_unit_CFLAGS = $(unit_test_cflags)
test_event_unit_LDFLAGS = $(unit_test_ldflags)
test_event_unit_LDADD = $(unit_test_ldadd)
#
# test-extension.unit
test_extension_unit_SOURCES = test-extension.c
test_extension_unit_CPPFLAGS = $(unit_test_cppflags)
test_extension_unit_CFLAGS = $(unit_test_cflags)
test_extension_unit_LDFLAGS = $(unit_test_ldflags)
test_extension_unit_LDADD = $(unit_test_ldadd)

# test-file.unit
test_file_unit_SOURCES = test-file.c
test_file_unit_CPPFLAGS = $(unit_test_cppflags)
test_file_unit_CFLAGS = $(unit_test_cflags)
test_file_unit_LDFLAGS = $(unit_test_ldflags)
test_file_unit_LDADD = $(unit_test_ldadd)

# test-ndarray.unit
test_ndarray_unit_SOURCES = test-ndarray.c
test_ndarray_unit_CPPFLAGS = $(unit_test_cppflags)
test_ndarray_unit_CFLAGS = $(unit_test_cflags)
test_ndarray_unit_LDFLAGS = $(unit_test_ldflags)
test_ndarray_unit_LDADD = $(unit_test_ldadd)

# test-parser.unit
test_parser_unit_SOURCES = test-parser.c
test_parser_unit_CPPFLAGS = $(unit_test_cppflags)
test_parser_unit_CFLAGS = $(unit_test_cflags)
test_parser_unit_LDFLAGS = $(unit_test_ldflags)
test_parser_unit_LDADD = $(unit_test_ldadd)

# test-parse-util.unit
test_parse_util_unit_SOURCES = \
    test-parse-util.c \
    $(top_srcdir)/src/block.c \
    $(top_srcdir)/src/compression/compressor_registry.c \
    $(top_srcdir)/src/context.c \
    $(top_srcdir)/src/error.c \
    $(top_srcdir)/src/log.c \
    $(top_srcdir)/src/parse_util.c \
    $(top_srcdir)/src/yaml.c \
    $(top_srcdir)/third_party/STC/src/cstr_core.c
test_parse_util_unit_CPPFLAGS = $(unit_test_cppflags)
test_parse_util_unit_CFLAGS = $(unit_test_cflags)
test_parse_util_unit_LDFLAGS = $(unit_test_ldflags)
test_parse_util_unit_LDADD = libmunit.a $(FYAML_LIBS) $(STATGRAB_LIBS) $(MD5_LIBS)

if HAVE_LINKER_WRAP
# test-malloc-fail.unit
# NOTE: This test is a bit of a pain to compile since for --wrap to work
# we can't rely on dynamic linking to libasdf, and have to compile all the
# necessary translation units directly into the test, similar to
# test-parse-util.c; for now it's not too many though.
#
# An alternative approach could also be to use a static libasdf if we
# configured to build one, and only build this test in that case; or always
# build a static lib if running `make check`...
check_PROGRAMS += test-malloc-fail.unit
test_malloc_fail_unit_SOURCES = \
    test-malloc-fail.c \
    $(top_srcdir)/src/block.c \
    $(top_srcdir)/src/compression/compressor_registry.c \
    $(top_srcdir)/src/context.c \
    $(top_srcdir)/src/tag.c \
    $(top_srcdir)/src/error.c \
    $(top_srcdir)/src/event.c \
    $(top_srcdir)/src/log.c \
    $(top_srcdir)/src/parse_util.c \
    $(top_srcdir)/src/parser.c \
    $(top_srcdir)/src/stream.c \
    $(top_srcdir)/src/util.c \
    $(top_srcdir)/src/yaml.c \
    $(top_srcdir)/third_party/STC/src/cstr_core.c
test_malloc_fail_unit_CPPFLAGS = $(unit_test_cppflags)
test_malloc_fail_unit_CFLAGS = $(unit_test_cflags)
test_malloc_fail_unit_LDFLAGS = \
    $(unit_test_ldflags) \
    -Wl,--wrap=malloc,--wrap=calloc,--wrap=strdup,--wrap=strndup
test_malloc_fail_unit_LDADD = libmunit.a $(FYAML_LIBS) $(STATGRAB_LIBS) $(MD5_LIBS) $(ASDF_LIBS)
endif

# test-stream.unit
test_stream_unit_SOURCES = \
    test-stream.c \
    $(top_srcdir)/src/context.c \
    $(top_srcdir)/src/error.c \
    $(top_srcdir)/src/log.c \
    $(top_srcdir)/src/stream.c
test_stream_unit_CPPFLAGS = $(unit_test_cppflags)
test_stream_unit_CFLAGS = $(unit_test_cflags)
test_stream_unit_LDFLAGS = $(unit_test_ldflags)
test_stream_unit_LDADD = $(FYAML_LIBS) libmunit.a $(STATGRAB_LIBS)

# test-tests.unit
test_tests_unit_SOURCES = test-tests.c
test_tests_unit_CPPFLAGS = $(unit_test_cppflags)
test_tests_unit_CFLAGS = $(unit_test_cflags)
test_tests_unit_LDFLAGS = $(unit_test_ldflags)
test_tests_unit_LDADD = libmunit.a $(STATGRAB_LIBS)

# test-value.unit
test_value_unit_SOURCES = test-value.c
test_value_unit_CPPFLAGS = $(unit_test_cppflags)
test_value_unit_CFLAGS = $(unit_test_cflags)
test_value_unit_LDFLAGS = $(unit_test_ldflags)
test_value_unit_LDADD = $(unit_test_ldadd)

# test-value-util.unit
test_value_util_unit_SOURCES = \
    test-value-util.c \
    $(top_srcdir)/src/value_util.c \
    $(top_srcdir)/third_party/STC/src/cstr_core.c
test_value_util_unit_CPPFLAGS = $(unit_test_cppflags)
test_value_util_unit_CFLAGS = $(unit_test_cflags)
test_value_util_unit_LDFLAGS = $(unit_test_ldflags)
test_value_util_unit_LDADD = libmunit.a $(STATGRAB_LIBS)

# test-yaml.unit
test_yaml_unit_SOURCES = \
    test-yaml.c \
    $(top_srcdir)/src/yaml.c
test_yaml_unit_CPPFLAGS = $(unit_test_cppflags)
test_yaml_unit_CFLAGS = $(unit_test_cflags)
test_yaml_unit_LDFLAGS = $(unit_test_ldflags)
test_yaml_unit_LDADD = $(unit_test_ldadd)


asdf_public_headers = \
    $(wildcard $(top_srcdir)/include/asdf/*.h) \
    $(wildcard $(top_srcdir)/include/asdf/core/*.h)


if WITH_GWCS
    check_PROGRAMS += \
        test-gwcs.unit

    # test-gwcs.unit
    test_gwcs_unit_SOURCES = test-gwcs.c
    test_gwcs_unit_CPPFLAGS = $(unit_test_cppflags)
    test_gwcs_unit_CFLAGS = $(unit_test_cflags)
    test_gwcs_unit_LDFLAGS = $(unit_test_ldflags)
    test_gwcs_unit_LDADD = $(unit_test_ldadd)

    asdf_public_headers += $(wildcard $(top_srcdir)/include/asdf/gwcs/*.h)
endif


# Shell tests
TOOL_TESTS = test-events.sh test-info.sh

if HAVE_MD5
    TOOL_TESTS += test-verify-checksums.sh
endif

if ASDF_BUILD_TOOL
TESTS += $(TOOL_TESTS)
else
$(warning Skipping running asdf command-line tests; make sure to run ./configure --enable-tool; make to build the tool)
endif

QUIET_OUT = $(if $(filter 1,$(V)),, > /dev/null)


# Test headers on C++
cpp_header_test = $(builddir)/test-cpp-headers.cpp
# Generate the C++ header test file
$(cpp_header_test): $(asdf_public_headers) $(srcdir)/scripts/generate_test_cpp_headers.sh
	$(AM_V_at)$(srcdir)/scripts/generate_test_cpp_headers.sh \
	    $(top_srcdir)/include $@ $(asdf_public_headers) \
	    $(QUIET_OUT)

test-cpp-headers$(EXEEXT): $(cpp_header_test) $(top_builddir)/libasdf.la
	$(AM_V_at)$(LIBTOOL) --mode=link $(CXX) -std=c++17 -I$(top_srcdir)/include \
	    $(ASDF_LDFLAGS) $(unit_test_ldflags) $(cpp_header_test) $(top_builddir)/libasdf.la $(ASDF_LIBS) \
	    -o $@ $(QUIET_OUT)

TESTS += test-cpp-headers
CLEANFILES = test-cpp-headers.cpp test-cpp-headers$(EXEEXT)


# Check examples in the documentation
if HAVE_PYTHON
DOC_EXAMPLES_DIR = $(builddir)/doc_examples
# Documentation files containing example programs
DOC_EXAMPLE_FILES = \
    $(top_srcdir)/README.rst \
    $(top_srcdir)/docs/usage/writing.rst

DOC_EXAMPLE_DEPS = \
    $(DOC_EXAMPLE_FILES) \
    $(srcdir)/scripts/extract_doc_examples.py \
    $(top_builddir)/libasdf.la

TESTS += $(DOC_EXAMPLES_DIR)/test-doc-examples.sh


$(DOC_EXAMPLES_DIR)/test-doc-examples.sh: $(DOC_EXAMPLE_DEPS)
	$(AM_V_at)$(PYTHON3) $(srcdir)/scripts/extract_doc_examples.py \
	  $(top_srcdir)/README.rst \
	  $(top_srcdir)/docs/usage/writing.rst \
	  --out-dir $(DOC_EXAMPLES_DIR) \
	  --fixtures-dir $(srcdir)/fixtures $(QUIET_OUT)
	$(AM_V_at)for f in $(DOC_EXAMPLES_DIR)/*.c; do \
	    exe=$${f%.c}; \
	    $(LIBTOOL) --mode=link $(CC) $(ASDF_CFLAGS) -I$(top_srcdir)/include \
	      $(ASDF_LDFLAGS) $(unit_test_ldflags) $$f $(top_builddir)/libasdf.la $(ASDF_LIBS) \
	      -o $$exe $(QUIET_OUT); \
	done

endif

AUTOMAKE_OPTIONS = parallel-tests

# CMake-related files to include in the distribution
CMAKE_DIST = CMakeLists.txt
EXTRA_DIST = $(TOOL_TESTS) $(CMAKE_DIST)
EXTRA_DIST += \
    munit.h \
    shell-test.sh \
    util.h \
    fixtures/255.asdf \
    fixtures/255-2-blocks.asdf \
    fixtures/255-block-no-index.asdf \
    fixtures/255-invalid-checksum.asdf \
    fixtures/255-no-newline-before-tree.asdf \
    fixtures/255-no-tree-padding-after-header.asdf \
    fixtures/255-no-tree.asdf \
    fixtures/255-out.asdf \
    fixtures/255-padding-after-header.asdf \
    fixtures/255-padding-after-tree.asdf \
    fixtures/byteorder.asdf \
    fixtures/compressed.asdf \
    fixtures/cube.asdf \
    fixtures/custom-tag-handle.asdf \
    fixtures/datatypes.asdf \
    fixtures/datatypes-out.asdf \
    fixtures/events/basic.events.txt \
    fixtures/events/basic.log \
    fixtures/events/complex.events.txt \
    fixtures/events/compressed.events.txt \
    fixtures/events/int.events.txt \
    fixtures/info/anchor.info.txt \
    fixtures/info/ascii.info.txt \
    fixtures/info/basic.info.txt \
    fixtures/info/complex.info.txt \
    fixtures/info/compressed.info.txt \
    fixtures/info/endian.info.txt \
    fixtures/info/exploded0000.info.txt \
    fixtures/info/exploded.info.txt \
    fixtures/info/float.info.txt \
    fixtures/info/int.info.txt \
    fixtures/info/scalars.info.txt \
    fixtures/info/shared.info.txt \
    fixtures/info/stream.info.txt \
    fixtures/info/structured.info.txt \
    fixtures/info/unicode_bmp.info.txt \
    fixtures/info/unicode_spp.info.txt \
    fixtures/multi-block.asdf \
    fixtures/multiple_hdu.asdf \
    fixtures/nested.asdf \
    fixtures/ndarray-out.asdf \
    fixtures/numeric.asdf \
    fixtures/parse-minimal.asdf \
    fixtures/parse-minimal-empty-tree.asdf \
    fixtures/parse-minimal-extra-comment.asdf \
    fixtures/roman_wcs.asdf \
    fixtures/scalars.asdf \
    fixtures/scalars-out.asdf \
    fixtures/tagged-scalars.asdf \
    fixtures/tiles.asdf \
    fixtures/trivial-extension.asdf \
    fixtures/value-types.asdf \
    fixtures/verify-checksums/255-2-blocks.verify-checksums.txt \
    fixtures/verify-checksums/255-invalid-checksum.verify-checksums.txt \
    munit/COPYING \
    munit/munit.c \
    munit/munit.h \
    scripts/extract_doc_examples.py \
    scripts/generate_test_cpp_headers.sh \
    $(top_srcdir)/docs/usage/writing.rst


# Bit of a hack to make syncing the submodule a prerequisite to make check
check-am: $(submodules)

# Clean up temp files from tests
distclean-local:
	rm -rf $(builddir)/tmp
	rm -rf $(srcdir)/doc_examples
	rm -rf $(builddir)/doc_examples

update-fixtures:
	top_srcdir=$(top_srcdir) srcdir=$(srcdir) $(srcdir)/test-events.sh --update
	top_srcdir=$(top_srcdir) srcdir=$(srcdir) $(srcdir)/test-info.sh --update
	top_srcdir=$(top_srcdir) srcdir=$(srcdir) $(srcdir)/test-verify-checksums.sh --update
